objects/SFRelease__ConnectedAppCreds__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>SFRelease__CallbackUrl__c</fullName>
        <label>CallbackUrl</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFRelease__Key__c</fullName>
        <label>Key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFRelease__Secret__c</fullName>
        <label>Secret</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>ConnectedAppCreds</label>
</CustomObject>